<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainPage">

    <ImageView
        android:id="@+id/tipsylogo"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:contentDescription="@string/todo"
        android:windowSoftInputMode="adjustNothing"
        app:srcCompat="@drawable/tipsy_logo"
        app:layout_constraintBottom_toTopOf="@id/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="63dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="232dp"
        android:background="@drawable/oval"
        android:backgroundTint="#DD1A25"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:windowSoftInputMode="adjustNothing"

        app:layout_constraintBottom_toTopOf="@id/button_reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tipsylogo"
        android:layout_centerInParent="true"/>


    <Button
        android:id="@+id/button_reg"
        android:layout_width="286dp"
        android:layout_height="49dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="732dp"
        android:background="@drawable/oval"
        android:backgroundTint="#D1001C"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:windowSoftInputMode="adjustNothing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/button_login"
        android:layout_centerInParent="true"/>



</androidx.coordinatorlayout.widget.CoordinatorLayout>